# itolearn

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  snap_layouts.rs
src/api/: index.ts
src/api/adapters/: course.ts  index.ts  test.test.ts  user.ts  utils.ts
src/api/services/: AuthService.ts  LoginStateManager.ts  index.ts  user.ts
src/api/test/: printEnumField.test.ts  printScheduleTable.test.ts
src/auto/: index.ts
src/auto/config/: classSchedule.ts  holidays.ts  (+1 more)
src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  CardGroup.module.css  CardGroup.tsx  Input.module.css  Input.tsx  Load.module.css  Load.tsx  Loading.module.css  Loading.tsx  Modal.module.css  Modal.tsx  ScrollableContainer.module.css  ScrollableContainer.tsx  Select.module.css  Select.tsx  Tabs.module.css  Tabs.tsx  Toast.module.css  Toast.tsx  Toggle.module.css  Toggle.tsx
src/config/: routes.ts
src/directives/: index.ts
src/env/: index.ts
src/layout/: Layout.module.css  Layout.tsx  Navigation.module.css  Navigation.tsx  Titlebar.module.css  Titlebar.tsx  UserCard.module.css  UserCard.tsx
src/pages/: Automate.module.css  Automate.tsx  Dashboard.tsx  NotFound.tsx  Setting.tsx  Test.tsx  Todo.tsx
src/store/: automate.ts  navigation.ts  schedule.ts
src/styles/: clear.css  global.css
src/utils/: EventEmitter.ts  JSONDB.ts  debounce.ts  index.ts  logger.ts
(+52 files in other folders)
